Lucene Change Log

For more information on past and future Lucene versions, please see:
http://s.apache.org/luceneversions

======================= Lucene 9.0.0 =======================

New Features

* LUCENE-9322: Vector-valued fields, Lucene90 Codec (Mike Sokolov, Julie Tibshirani, Tomoko Uchida)

* LUCENE-9004: Approximate nearest vector search via NSW graphs

* LUCENE-9476: DirectoryTaxonomyReader now provides a getBulkPath API (Gautam Worah)

System Requirements

* LUCENE-8738: Move to Java 11 as minimum Java version.
  (Adrien Grand, Uwe Schindler)

API Changes

* LUCENE-8982: Separate out native code to another module to allow cpp
  build with gradle. This also changes the name of the native "posix-support"
  library to LuceneNativeIO. (Zachary Chen, Dawid Weiss)

* LUCENE-9562: All binary analysis packages (and corresponding
  Maven artifacts) with names containing '-analyzers-' have been renamed
  to '-analysis-'. (Dawid Weiss)

* LUCENE-8474: RAMDirectory and associated deprecated classes have been
  removed. (Dawid Weiss)

* LUCENE-3041: The deprecated Weight#extractTerms() method has been 
  removed (Alan Woodward, Simon Willnauer, David Smiley, Luca Cavanna)

* LUCENE-8805: StoredFieldVisitor#stringField now takes a String rather than a
  byte[] that stores the UTF-8 bytes of the stored string.
  (Namgyu Kim via Adrien Grand)

* LUCENE-8811: BooleanQuery#setMaxClauseCount() and #getMaxClauseCount() have
  moved to IndexSearcher. The checks are now implemented using a QueryVisitor
  and apply to all queries, rather than only booleans. (Atri Sharma, Adrien
  Grand, Alan Woodward)

* LUCENE-8909: The deprecated IndexWriter#getFieldNames() method has been removed.
  (Adrien Grand, Munendra S N)

* LUCENE-8948: Change "name" argument in ICU factories to "form". Here, "form" is
  named after "Unicode Normalization Form". (Tomoko Uchida)

* LUCENE-8933: Validate JapaneseTokenizer user dictionary entry. (Tomoko Uchida)
