@@ -571,10 +571,13 @@ public class TestDirectoryTaxonomyReader extends FacetTestCase {
   }
 
   public void testCallingBulkPathReturnsCorrectResult() throws Exception {
+    float PROBABILITY_OF_COMMIT = 0.5f;
     Directory src = newDirectory();
     DirectoryTaxonomyWriter w = new DirectoryTaxonomyWriter(src);
     String randomArray[] = new String[random().nextInt(1000)];
-    Arrays.setAll(randomArray, i -> Integer.toString(random().nextInt()));
+    // adding a smaller bound on ints ensures that we will have some duplicate ordinals in random
+    // test cases
+    Arrays.setAll(randomArray, i -> Integer.toString(random().nextInt(500)));
 
     FacetLabel allPaths[] = new FacetLabel[randomArray.length];
     int allOrdinals[] = new int[randomArray.length];
@@ -582,6 +585,10 @@ public class TestDirectoryTaxonomyReader extends FacetTestCase {
     for (int i = 0; i < randomArray.length; i++) {
       allPaths[i] = new FacetLabel(randomArray[i]);
       w.addCategory(allPaths[i]);
+      // add random commits to create multiple segments in the index
+      if (random().nextFloat() < PROBABILITY_OF_COMMIT) {
+        w.commit();
+      }
     }
     w.commit();
     w.close();
